# elder-scam-shield

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SUBMISSION.md  VIDEO_SCRIPT.md  app.py  cloudbuild.yaml  pyproject.toml  requirements.txt
agents/: __init__.py  agent.py  behavioral_analyzer.py  db.py  fact_extractor.py  family_alerter.py  inbound_classifier.py  naive_classifier.py  outbound_interceptor.py  root_agent.py  schemas.py
agents/tools/: __init__.py  graph_builder.py  (+4 more)
data/: CORPUS_VALIDATION_REPORT.md  DATA_PROVENANCE.md  corpus_stats.py  dashboard_seed.json  derive_baselines.py  download_datasets.py  gemini_classify.py  gemini_classify_log.jsonl  generate_edge_cases.py  generate_jp_scenarios.py  generate_jp_scenarios_v2.py  process_antiphishing.py  process_antiphishing_v2.py  process_conversations.py  process_corpus.py  reslug_taxonomy.py  retag_corpus.py  scrape_antiphishing.py  validate_corpus.py
docs/: DOMAIN_MODEL.md
evals/: OBSERVABILITY_REPORT.md  eval_config.json  longitudinal_scenarios.json  optimize_prompts.py  run_baseline_eval.py  run_evaluation.py  run_live_eval.py  run_longitudinal_eval.py  run_observability.py  run_optimizer.py  scam_detection.evalset.json  scam_detection_english.evalset.json  scam_detection_full.evalset.json  simulation_scenarios.py  social_graph_eval.evalset.json  test_behavioral_sequence.py
scenarios/: adversarial_edge_cases.json  demo_7day.json
tests/: conftest.py  test_analyzer.py  test_classifier.py  test_interceptor.py  test_risk_ledger.py
web/: analyzer.html  architecture.html  dashboard.html  demo-walkthrough.html  index.html  scenario_seeds.json  technical.html  trace_seeds.json
(+22 files in other folders)
