[project]
name = "elder-scam-shield"
version = "0.1.0"
description = "Multi-agent scam protection for elderly Japanese users"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "google-cloud-firestore>=2.19.0,<3.0.0",
    "google-cloud-aiplatform>=1.74.0,<2.0.0",
    "google-cloud-discoveryengine>=0.13.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "datasets>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0,<9.0.0"]
observability = [
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.20.0,<2.0.0",
]
